--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                                 <div class="card-body-icon">
                                     <i class="fas fa-fw fa-shopping-cart"></i>
                                 </div>
-                                <div class="mr-5">123 Todays Orders!</div>
+                                <div class="mr-5">123 Today's Orders!</div>
                             </div>
                             <a class="card-footer text-white clearfix small z-1" href="#">
                                 <span class="float-left">View Details</span>
