--- a/forgot-password.html
+++ b/forgot-password.html
@@ -29,15 +29,12 @@
           <h4>Forgot your password?</h4>
           <p>Enter your email address and we will send you instructions on how to reset your password.</p>
         </div>
-        <form id="registrationForm" name="regForm"  class="needs-validation" novalidate >
+        <form action="" method="post" id="fileForm" role="form">
           <div class="form-group">
             <div class="form-label-group">
-              <input type="email" id="inputEmail" class="form-control" placeholder="Enter email address" required="required" autofocus="autofocus">
-              <label for="inputEmail">Enter email address</label>
-              <div class="invalid-feedback">
-                  Please enter your email address
-              
-          </div>
+              <input type="email" id="email" class="form-control" placeholder="Email address"  onchange="email_validate(this.value);" required >
+              <label for="email">Email address</label>
+              <div class="status" id="status"></div>
             </div>
             
           </div>
