--- a/index.html
+++ b/index.html
@@ -451,9 +451,6 @@
                         <div class="card-footer small text-muted"></div>
                     </div>
 
-
-
-
                     <div class="card mb-3">
                         <div class="card-header">Customer Stories
                         </div>
@@ -498,7 +495,7 @@
                                             <div class="show1">
                                                 <input type="file" class="custom-file-input" id="custprofileinput"
                                                     aria-describedby="inputGroupFile" name="fchooseprofile"
-                                                    accept="image/*" multiple required onchange="readCustStories(this);">
+                                                    accept="image/*"  required onchange="readFile()">
                                                 <label class="custom-file-label" for="custprofileinput">Choose
                                                     file</label>
                                                 <div class="invalid-feedback"><br>
@@ -526,7 +523,7 @@
                                     class="img-thumbnail">
                                     
                         </div>
-                       <!-- //<p id="b64"></p> -->
+                       <p id="base64"></p>
                         </div>
                         </form>
                         <div class="card-footer small text-muted"></div>
