--- a/index.html
+++ b/index.html
@@ -801,6 +801,7 @@
     <!-- Custom scripts for all pages-->
     <script src="js/sb-admin.min.js"></script>
     <script src="js/validate.js"></script>
+    <script src="js/common.js"></script>
 
     <!-- <script src="js/bootstrap-validate.js"></script> -->
 
