--- a/index.html
+++ b/index.html
@@ -234,8 +234,7 @@
 
                                             <div class="custom-file">
                                                 <div class="myDiv">
-
-                                                    <input type="file" class="custom-file-input" id="sliderinput" aria-describedby="inputGroupFileG" name="fchoose" accept="image/*" required onchange="readBannerImage(this);">
+                                                    <input type="file" class="custom-file-input" id="sliderinput" aria-describedby="inputGroupFileG" name="fchoose" accept="image/*" required onchange="readBannerImage()">
 
 
                                                     <label class="custom-file-label" for="sliderinput">Choose file</label>
@@ -306,7 +305,7 @@
                                             </div>
                                             <div class="custom-file">
                                                 <div class="myDiv">
-                                                    <input type="file" class="custom-file-input" id="addplaninput" aria-describedby="inputGroupFile" name="fchooseprofile" accept="image/*" required onchange="readAddPlan(this);">
+                                                    <input type="file" class="custom-file-input" id="addplaninput" aria-describedby="inputGroupFile" name="fchooseprofile" accept="image/*" required onchange="readAddPlan()">
                                                     <label class="custom-file-label" for="addplaninput">Choose file</label>
                                                     <div class="invalid-feedback"><br>
                                                         Please Select an image
