--- a/login.html
+++ b/login.html
@@ -25,7 +25,7 @@
     <div class="card card-login mx-auto mt-5">
       <div class="card-header">Login</div>
       <div class="card-body">
-        <form action="" method="post" id="fileForm" role="form">
+        <form action="" method="post" id="loginForm" role="form">
           <div class="form-group">
             <div class="form-label-group">
                 
@@ -41,15 +41,15 @@
                   <div class="status1" id="status1"></div>
             </div>
           </div>
-          <div class="form-group">
+          <!-- <div class="form-group">
             <div class="checkbox">
               <label>
                 <input type="checkbox" value="remember-me">
                 Remember Password
               </label>
             </div>
-          </div>
-          <button type="submit" id="submit" class="btn btn-info">Submit</button>
+          </div> -->
+          <button type="submit" id="submit" class="btn btn-info" onclick="loginForm()">Submit</button>
         </form>
         <div class="text-center">
           <a class="d-block small mt-3" href="register.html">Register an Account</a>
@@ -68,6 +68,10 @@
 
   <script src="js/sb-admin.min.js"></script>
   <script src="js/validate.js"></script>
+
+  <script src="js/common.js"></script>
+  <script src="js/account.js"></script>
+
 
 </body>
 
