--- a/login.html
+++ b/login.html
@@ -25,7 +25,7 @@
     <div class="card card-login mx-auto mt-5">
       <div class="card-header">Login</div>
       <div class="card-body">
-        <form action="" method="post" id="loginForm" role="form">
+        <form action="" method="post" id="loginFormm" role="form" >
           <div class="form-group">
             <div class="form-label-group">
                 
@@ -49,7 +49,8 @@
               </label>
             </div>
           </div> -->
-          <button type="submit" id="submit" class="btn btn-info" onclick="loginForm()">Submit</button>
+          
+          <button type="button" id="submit" class="btn btn-info" onclick="loginForm();">Submit</button>
         </form>
         <div class="text-center">
           <a class="d-block small mt-3" href="register.html">Register an Account</a>
@@ -68,6 +69,9 @@
 
   <script src="js/sb-admin.min.js"></script>
   <script src="js/validate.js"></script>
+
+ 
+
 
   <script src="js/common.js"></script>
   <script src="js/account.js"></script>
