--- a/login.html
+++ b/login.html
@@ -29,8 +29,8 @@
           <div class="form-group">
             <div class="form-label-group">
                 
-              <input type="email" id="email" class="form-control" placeholder="Email address"  onchange="email_validate(this.value);" required >
-              <label for="email">Email address</label>
+              <input type="text" id="username" class="form-control" placeholder="Username"  required >
+              <label for="username">Username</label>
               <div class="status" id="status"></div>
             </div>
           </div>
