--- a/login.html
+++ b/login.html
@@ -29,16 +29,16 @@
           <div class="form-group">
             <div class="form-label-group">
                 
-              <input type="text" id="username" class="form-control" placeholder="Username"  required >
+              <input type="text" id="username" class="form-control" placeholder="Username" required  >
               <label for="username">Username</label>
-              <div class="status" id="status"></div>
+              <div class="unamestatus" id="unamestatus"></div>
             </div>
           </div>
           <div class="form-group">
             <div class="form-label-group">
-              <input type="password" id="pass1" class="form-control inputpass"  placeholder="Password" onchange="pass_val(this.value);" required >
-                  <label for="pass1">Password</label>
-                  <div class="status1" id="status1"></div>
+              <input type="password" id="pass" class="form-control inputpass"  placeholder="Password" onchange="pass_val(this.value);" required >
+                  <label for="pass">Password</label>
+                  <div class="passstatus" id="passstatus"></div>
             </div>
           </div>
           <!-- <div class="form-group">
