--- a/index.html
+++ b/index.html
@@ -409,6 +409,7 @@
 
                                     <button type="submit" id="submit" class="btn btn-info">Submit</button>
                                     <label id="result"></label>
+                                    <p id="demo"></p>
                                 </div>
                                 <br>
 
