--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
                                         </div>
 
                                     </div>
-                                    <p>Akhilesh</p>
+                                    <p id="demo"></p>
                                 </div>
 
                                 <br>
