--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- Custom styles for this template-->
     <link href="css/sb-admin.css" rel="stylesheet">
 
-    <script src="https://cdn.ckeditor.com/4.13.0/standard-all/ckeditor.js"></script>
+   
 
 
 
@@ -60,7 +60,7 @@
                 <a class="dropdown-item" href="Permission.html">Permission</a>
               
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">Logout</a>
+                <a class="dropdown-item" href="logout.html" data-toggle="modal" data-target="#logoutModal">Logout</a>
               </div>
             </li>
           </ul>
