text editor implemented in all form commit

--- a/Permission.html
+++ b/Permission.html
@@ -20,6 +20,9 @@
   <!-- Custom styles for this template-->
   <link href="css/sb-admin.css" rel="stylesheet">
 
+ 
+
+
 </head>
 
 <body id="page-top">
@@ -176,36 +179,39 @@
 
                             </div>
                             <br>
-                          
-<div class="custom-control custom-checkbox custom-control-inline">
-    <input type="checkbox" class="custom-control-input" id="Banner">
-    <label class="custom-control-label" for="Banner">Banner</label>
-  </div>
-  <br>
+                            <div class="checkbox">
+                              <label>
+                                  <input type="checkbox" name="Banner" value="Banner" required data-error-msg="You have to select one expertise.">
+                                  Banner
+                              </label>
+                          </div>
+                          <div class="checkbox">
+                              <label>
+                                  <input type="checkbox" name="Intro" value="Intro">
+                                  Intro Text and Image
+                              </label>
+                          </div>
+                          <div class="checkbox">
+                            <label>
+                                <input type="checkbox" name="Plan" value="Plan">
+                                Add Plan
+                            </label>
+                        </div>
+                        <div class="checkbox">
+                          <label>
+                              <input type="checkbox" name="Meal" value="Meal">
+                              Add Meal
+                          </label>
+                      </div>
+                      <div class="checkbox">
+                        <label>
+                            <input type="checkbox" name="Story" value="Story">
+                            Customer Story
+                        </label>
+                    </div>
+                             
+
  
-  <div class="custom-control custom-checkbox custom-control-inline">
-    <input type="checkbox" class="custom-control-input" id="Intro text and image">
-    <label class="custom-control-label" for="Intro text and image">Intro text and image</label>
-  </div>
-  <br>
-  
-  <div class="custom-control custom-checkbox custom-control-inline">
-    <input type="checkbox" class="custom-control-input" id="Plan">
-    <label class="custom-control-label" for="Plan">Plan</label>
-  </div>
-  <br>
-  
-  <div class="custom-control custom-checkbox custom-control-inline">
-      <input type="checkbox" class="custom-control-input" id="Meal">
-      <label class="custom-control-label" for="Meal">Meal</label>
-    </div>
-    <br>
-   
-    <div class="custom-control custom-checkbox custom-control-inline">
-      <input type="checkbox" class="custom-control-input" id="Customer Story">
-      <label class="custom-control-label" for="Customer Story">Customer Story</label>
-    </div>
-  
 
 
 
