--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
     <script src="js/account.js"></script>
     <script src="js/validate.js"></script>
     
-    <!-- <script src="js/index.js"></script> -->
+    <script src="js/index.js"></script>
     <!-- <script src="js/bootstrap-validate.js"></script> -->
     <!-- Demo scripts for this page-->
     <script src="js/demo/datatables-demo.js"></script>
