--- a/login.html
+++ b/login.html
@@ -29,7 +29,7 @@
           <div class="form-group">
             <div class="form-label-group">
                 
-              <input type="text" id="username" class="form-control" placeholder="Username" onchange="username_validate(this.value);" required  >
+              <input type="text" id="username" class="form-control" placeholder="Username"  required  >
               <label for="username">Username</label>
               <div class="unamestatus" id="unamestatus"></div>
             </div>
@@ -61,11 +61,11 @@
   <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
   <script src="js/sb-admin.min.js"></script>
-  <script src="js/passwordvalidate.js"></script>
+  
 
  
 
-
+  <script src="js/passwordvalidate.js"></script>
   <script src="js/common.js"></script>
   <script src="js/account.js"></script>
 
