--- a/ContactUs.html
+++ b/ContactUs.html
@@ -76,61 +76,25 @@
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="pagesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           <i class="fas fa-fw fa-folder"></i>
-          <span>Pages</span>
-        </a>
-        <div class="dropdown-menu" aria-labelledby="pagesDropdown">
-          <h6 class="dropdown-header">Login Screens:</h6>
-          <a class="dropdown-item" href="login.html">Login</a>
-          <a class="dropdown-item" href="register.html">Register</a>
-          <a class="dropdown-item" href="forgot-password.html">Forgot Password</a>
-          <div class="dropdown-divider"></div>
-          <h6 class="dropdown-header">Other Pages:</h6>
-          <a class="dropdown-item" href="404.html">404 Page</a>
-          <a class="dropdown-item" href="blank.html">Blank Page</a>
-        </div>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="charts.html">
-          <i class="fas fa-fw fa-chart-area"></i>
-          <span>Charts</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="tables.html">
-          <i class="fas fa-fw fa-table"></i>
-          <span>Tables</span></a>
-      </li>
+          <span>Manage Operations</span>
+                </a>
+                <div class="dropdown-menu" aria-labelledby="pagesDropdown">
+                    
+                    <a class="dropdown-item" href="BannerImage.html">Banner Image</a>
+                    <a class="dropdown-item" href="introImageText.html">Intro Image and Text</a>
+                    <a class="dropdown-item" href="addPlan.html">Add Plan</a>
+                    <a class="dropdown-item" href="addMeal.html">Add Meal</a>
+                    <a class="dropdown-item" href="addCustData.html">Customer Story</a>
+                    <a class="dropdown-item" href="Permission.html">Permisssion</a>
+                </div>
+            </li>
+           
+            <li class="nav-item">
+                <a class="nav-link" href="tables.html">
+                    <i class="fas fa-fw fa-table"></i>
+                    <span>Daily Orders</span></a>
+            </li>
 
-      <li class="nav-item ">
-        <a class="nav-link" href="BannerImage.html">
-            <i class="fas fa-fw fa-folder"></i>
-            <span>Manage Banner Image</span></a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" href="introImageText.html">
-            <i class="fas fa-fw fa-folder"></i>
-            <span>Manage Intro Image and Text</span></a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" href="addPlan.html">
-            <i class="fas fa-fw fa-folder"></i>
-            <span>Manage Add Plan</span></a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" href="addMeal.html">
-            <i class="fas fa-fw fa-folder"></i>
-            <span>Manage Add Meal</span></a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" href="addCustData.html">
-            <i class="fas fa-fw fa-folder"></i>
-            <span>Manage Customer Stories</span></a>
-    </li>
-
-    <li class="nav-item ">
-        <a class="nav-link" href="Permission.html">
-            <i class="fas fa-fw fa-folder"></i>
-            <span>Manage Permission</span></a>
-    </li>
     <li class="nav-item ">
         <a class="nav-link " href="TermsAndCondition.html">
             <i class="fas fa-fw fa-folder"></i>
@@ -282,8 +246,7 @@
 
 
  <script src="js/common.js"></script>
-  <script src="js/validate.js"></script>
-
+ 
 
 </body>
 
