--- a/BannerImage.html
+++ b/BannerImage.html
@@ -233,6 +233,7 @@
   <script src="js/sb-admin.min.js"></script>
 
 
+ <script src="js/validate.js"></script>
  <script src="js/common.js"></script>
  <script src="js/bannerimg.js"></script>
 
