--- a/PrivacyAndPolicy.html
+++ b/PrivacyAndPolicy.html
@@ -224,6 +224,8 @@
   <!-- Custom scripts for all pages-->
   <script src="js/sb-admin.min.js"></script>
 
+  <script src="js/validate.js"></script>
+
 
  
 
