--- a/introImageText.html
+++ b/introImageText.html
@@ -254,6 +254,9 @@
   <!-- Custom scripts for all pages-->
   <script src="js/sb-admin.min.js"></script>
 
+
+
+  <script src="js/validate.js"></script>
   <script src="js/common.js"></script>
   <script src="js/introtext.js"></script>
  
