--- a/ContactUs.html
+++ b/ContactUs.html
@@ -245,6 +245,7 @@
   <script src="js/sb-admin.min.js"></script>
 
 
+ <script src="js/validate.js"></script>
  <script src="js/common.js"></script>
  
 
